# git-cuttle

./: .gitignore  AGENTS.md  BACKLOG.md  DESIGN.md  INTEGRATION_TEST_MATRIX.md  PLAN.md  README.md  TODO.md  TROUBLESHOOTING.md  default.nix  flake.nix  format.sh  init-template.sh  overlay.nix  pyproject.toml
.github/workflows/: workflow.yml
git_cuttle/: __init__.py  __main__.py  absorb.py  cli.py  delete.py  errors.py  git_ops.py  lib.py  list_output.py  metadata_manager.py  new.py  orchestrator.py  plan_output.py  prune.py  rebase.py  remote_status.py  transaction.py  update.py  workspace.py  workspace_paths.py  workspace_transaction.py  worktree_tracking.py
py_start/: __init__.py  __main__.py
tests/: test_absorb_cli_integration.py  test_absorb_integration.py  test_delete_prune_cli_integration.py  test_delete_prune_integration.py  test_env_action.py  test_errors.py  test_git_ops.py  test_integration.py  test_integration_test_matrix.py  test_lib.py  test_list_cli_integration.py  test_list_output.py  test_main.py  test_metadata_cli_lifecycle_integration.py  test_metadata_manager.py  test_metadata_migration_integration.py  test_mutating_command_parity_cli_integration.py  test_new_cli_integration.py  test_new_workspace.py  test_orchestrator.py  test_plan_output.py  test_prune.py  test_readme_documented_output.py  test_rebase.py  test_remote_status.py  test_safety_critical_integration.py  test_transaction.py  test_update_cli_integration.py  test_update_integration.py  test_workspace.py  test_workspace_paths.py
