[project]
name = "git-cuttle"
version = "0.1.0"
requires-python = ">=3.10.12"

dependencies = [
    "python-dotenv~=1.0",
    "setproctitle~=1.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy~=1.9",
    "pyright",
    "pytest",
]

[project.scripts]
gitcuttle = "git_cuttle.__main__:main"

[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["git_cuttle"]

[tool.setuptools.package-data]
"git_cuttle" = ["py.typed"]

[tool.isort]
profile = "black"
skip = [".direnv", "result", ".venv"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
exclude = [".direnv", "result", ".venv"]

[tool.mypy]
strict = true
exclude = [".direnv", "result", ".venv"]

# Improved error messages
pretty = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
markers = [
    "integration: black-box integration tests that require installed executables",
]

# [[tool.mypy.overrides]]
# module = ["example"]
# ignore_missing_imports = true
